--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ember/test-helpers": "^2.8.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@tsconfig/ember": "^1.0.1",
+    "@types/rsvp": "^4.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.4.3",
@@ -38,6 +40,7 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-cli-typescript": "^5.2.1",
     "ember-data": "~4.7.3",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
@@ -58,6 +61,7 @@
     "prettier": "^2.7.1",
     "qunit": "^2.19.2",
     "qunit-dom": "^2.0.0",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0"
   },
   "engines": {
